Actually did several additions

--- a/config.ini
+++ b/config.ini
@@ -3,10 +3,23 @@
 ; you can get it by right-clicking on the wallpaper in wallpaper engine and pressing open in explorer
 ; right-click on project.json and copy as path, then place it after day or night. REMOVE QUOTATION MARKS!!!
 
+; if you want up to 4 wallpapers and 4 different time periods to display them,
+; you can just remove the semicolons from the ones you want to include.
+
+
 [Wallpapers]
-day = C:\Program Files (x86)\Steam\steamapps\workshop\content\431960\3174556087\project.json
-night = C:\Program Files (x86)\Steam\steamapps\workshop\content\431960\2674860628\project.json
+wallpaper1 = C:\Program Files (x86)\Steam\steamapps\workshop\content\431960\3174556087\project.json
+wallpaper2 = C:\Program Files (x86)\Steam\steamapps\workshop\content\431960\2674860628\project.json
+; wallpaper3 = 
+; wallpaper4 = 
+
 
 [Times]
-day_start = 6
-day_end = 18
+period1_start = 6
+period1_end = 18
+period2_start = 18
+period2_end = 6
+; period3_start =
+; period3_end =
+; period4_start =
+; period4_end =
