--- a/config.ini
+++ b/config.ini
@@ -8,8 +8,8 @@
 
 
 [Wallpapers]
-wallpaper1 = C:\Program Files (x86)\Steam\steamapps\workshop\content\431960\3174556087\project.json
-wallpaper2 = C:\Program Files (x86)\Steam\steamapps\workshop\content\431960\2674860628\project.json
+wallpaper1 = C:\your project.json
+wallpaper2 = C:\second project.json
 ; wallpaper3 = 
 ; wallpaper4 = 
 
