--- a/config.ini
+++ b/config.ini
@@ -3,9 +3,9 @@
 ; you can get it by right-clicking on the wallpaper in wallpaper engine and pressing open in explorer
 ; right-click on project.json and copy as path, then place it after day or night. REMOVE QUOTATION MARKS!!!
 
-; if you want up to 4 wallpapers and 4 different time periods to display them,
-; you can just remove the semicolons from the ones you want to include.
+; if you want up to 4 wallpapers and 4 different time periods to display them, just remove the comments on the ones you want to include.
 
+;the times are 24-hour format
 
 [Wallpapers]
 wallpaper1 = C:\your project.json
